# Master-IA-ARA

./: .gitignore  claude.md  copilot-instructions.md  memoria_scraping.md  orquestador.md  package-lock.json  pyproject.toml  setup_auth.js
.planning/: EXECUTION_PLAN_PHASE0_PHASE1.md  PHASE1_ANALISIS_ESTADO.md  PHASES_V2_TO_V6.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.worktrees/phase0-foundation/: .gitignore  pyproject.toml
.worktrees/phase1-connectors/: .gitignore  pyproject.toml
.worktrees/phase1-connectors/.planning/: PROJECT.md
.worktrees/phase1-connectors/.planning/research/: ARCHITECTURE.md
.worktrees/phase1-connectors/src/extraction/: __init__.py  cleaning.py  dumps.py  errors.py  http.py  kernel.py  models.py  protocols.py  retry.py  utils.py
.worktrees/phase1-connectors/src/extraction/connectors/: __init__.py  base.py  buff163.py  csfloat.py  csmoney.py  json_parser.py  steam.py  steamdt.py
.worktrees/phase1-connectors/tests/extraction/: test_connectors_probe_first.py  test_kernel.py
.worktrees/phase1-quality/: .gitignore  copilot-instructions.md  pyproject.toml
.worktrees/phase1-quality/.planning/research/: SUMMARY.md
.worktrees/phase1-quality/config/: local_paths.example.toml
.worktrees/phase1-quality/src/cs2_price_trend/: __init__.py
.worktrees/phase1-quality/src/cs2_price_trend/quality/: __init__.py  frame_utils.py  history_contract.py  sanitation.py  validation.py
.worktrees/phase1-quality/src/cs2_price_trend/reliability/: __init__.py  run_metrics.py
.worktrees/phase1-quality/src/cs2_price_trend/storage/: __init__.py  paths.py
.worktrees/phase1-quality/tests/: conftest.py
.worktrees/phase1-quality/tests/quality/: test_history_contract.py  test_sanitation.py  test_validation.py
.worktrees/phase1-quality/tests/reliability/: test_run_metrics.py
.worktrees/phase1-quality/tests/storage/: test_paths.py
config/: local_paths.example.toml
data/: README.md
data/catalog/: master_catalog_exhaustive_by_type_counts.json  master_catalog_exhaustive_missing_fields.json  master_catalog_exhaustive_missing_fields.md  master_catalog_exhaustive_summary.json  master_catalog_exhaustive_summary.md
data/runs/: 34b5fd049255486abe498ecf11b0a695_metrics.json  46a42d9714b64d1089ba1561beca0de9_metrics.json  8479a1df1e614fd1992dc2730199901e_metrics.json  a454d6e856e3493c94a23e3605e977fd_metrics.json  a454d6e856e3493c94a23e3605e977fd_quality_report.json  d992ac0f42ce4f679b26ab8126611a93_metrics.json
scripts/: open_logged_browser.js  phase1_smoke_validation.py  phase2_multidomain_bot.py
src/cs2_price_trend/: __init__.py
src/cs2_trend/: __init__.py  __main__.py  cli.py
src/extraction/: __init__.py  auth_cookies.py  cleaning.py  dumps.py  errors.py  http.py  kernel.py  models.py  protocols.py  retry.py  utils.py
tests/: conftest.py  test_canonical_id.py  test_catalog_discovery.py  test_catalog_service.py  test_phase0_http_client.py  test_probe_dump_repository.py
tests/extraction/: test_auth_cookies.py  test_connectors_probe_first.py  test_kernel.py
tests/phase1/: test_services.py
tests/phase2/: test_bot.py
tests/quality/: test_history_contract.py  test_sanitation.py  test_transforms.py  test_validation.py
tests/reliability/: test_run_metrics.py
(+136 files in other folders)
