[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cs2-extraction-phase1"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.28,<0.29",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "N"]

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
mypy_path = "src"
check_untyped_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
ignore_missing_imports = true
