[project]
name = "cs2-price-trend-intelligence"
version = "0.1.0"
description = "Phase 1 quality and validation layer for CS2 historical prices"
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.2",
  "pandera>=0.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["pandas", "pandas.*", "pandera", "pandera.*"]
ignore_missing_imports = true
